Fix awkward spacing problem

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -70,6 +70,7 @@ div.line {
 }
 
 .chord {
+    width: 0;
     position: relative;
 }
 
